<?xml version="1.0" encoding="UTF-8"?>
<AbsoluteLayout android:background="@layout/fundo_escuro" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/BordaGeral" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
                <ImageView android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/menu_principal_definir_periodo" />
                <TextView android:textSize="@dimen/Titulo" android:textStyle="bold" android:textColor="@color/LayoutEscuro_Titulo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_Principal_Definir_Periodo" />
            </LinearLayout>
           	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
           	    android:layout_marginBottom="5dp" android:orientation="vertical" android:gravity="center">
				<CheckBox android:id="@id/chkPeriodoInicio" android:text="@string/layoutDefinirPeriodo_lblPeriodoInicio" android:layout_width="fill_parent" android:layout_height="wrap_content" />
				<DatePicker android:id="@id/pikPeriodoInicio" android:layout_width="wrap_content" android:layout_height="wrap_content" />
				<CheckBox android:id="@id/chkPeriodoFim" android:text="@string/layoutDefinirPeriodo_lblPeriodoFim" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" />
				<DatePicker android:id="@id/pikPeriodoFim" android:layout_width="wrap_content" android:layout_height="wrap_content" />
			</LinearLayout>			
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                <Button android:id="@id/btnGravar" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/comum_btnGravar" />
                <Button android:id="@id/btnVoltar" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/comum_btnVoltar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</AbsoluteLayout>