<?xml version="1.0" encoding="UTF-8"?>
<AbsoluteLayout android:background="@layout/fundo_claro" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/BordaGeral" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/Titulo" android:textColor="@color/LayoutClaro_TextoSemDestaque" android:gravity="center_horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geral_NomeDoSistema" />
            <TextView android:textSize="@dimen/SubTitulo" android:textColor="@color/LayoutClaro_TextoSemDestaque" android:gravity="center_horizontal" android:id="@id/lblVersao" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logotipo192x192" />
            <TextView android:textSize="@dimen/SubTitulo" android:textStyle="bold" android:textColor="@color/LayoutClaro_Titulo" android:gravity="center_horizontal" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layoutSobre_lblMensagemDeBoasVindas" />
            <Button android:id="@id/btnProsseguir" android:layout_width="130.0dip" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/TextoPequeno" android:textColor="@color/LayoutClaro_TextoSemDestaque" android:gravity="center_horizontal" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/geral_EmailDoDesenvolvedor" />
            <LinearLayout android:orientation="vertical" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/Texto" android:textColor="@color/LayoutClaro_Titulo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layoutSobre_lblDescritivoDaVersao" />
            </LinearLayout>
            <ImageView android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/desenvolvedor" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textSize="@dimen/TextoPequeno" android:textColor="@color/LayoutClaro_TextoSemDestaque" android:id="@id/chkExibirAoIniciar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layoutSobre_chkExibirAoIniciar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</AbsoluteLayout>