<?xml version="1.0" encoding="UTF-8"?>
<AbsoluteLayout android:background="@layout/fundo_escuro" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/BordaGeral" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
                <ImageView android:id="@id/imgIcone" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <TextView android:textSize="@dimen/Titulo" android:textStyle="bold" android:textColor="@color/LayoutEscuro_Titulo" android:id="@id/lblTitulo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
                <Button android:id="@id/btnGravar1" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginRight="5.0dip" android:text="@string/comum_btnGravar" />
                <Button android:id="@id/btnApagar1" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/comum_btnApagar" />
                <Button android:id="@id/btnCancelar1" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginLeft="5.0dip" android:text="@string/comum_btnCancelar" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@layout/fundo_secao" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
                <TimePicker android:id="@id/timePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" />
                <DatePicker android:id="@id/datePicker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <FrameLayout android:background="@color/LayoutEscuro_TextoSemDestaque" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" />
                <TextView android:textSize="@dimen/Texto" android:textColor="@color/LayoutEscuro_Texto" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layoutMarcarHorario_lblComentarios" />
                <EditText android:gravity="top" android:id="@id/txtComentarios" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" />
                <Button android:textSize="@dimen/Texto" android:textColor="#ffffffff" android:id="@id/btnSelecionarCor" android:paddingTop="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/layoutMarcarHorario_lblCor" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:id="@id/btnGravar2" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginRight="5.0dip" android:text="@string/comum_btnGravar" />
                <Button android:id="@id/btnApagar2" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/comum_btnApagar" />
                <Button android:id="@id/btnCancelar2" android:layout_width="90.0dip" android:layout_height="70.0dip" android:layout_marginLeft="5.0dip" android:text="@string/comum_btnCancelar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</AbsoluteLayout>